# inference-time-program-selection-for-transformer-models

./: .gitignore  MANIFEST.md  README.md  pyproject.toml  requirements.txt
analysis/: analyze_bivariate_interactions.py  plot_accuracy_distribution.py  plot_dart_analysis.py  plot_delta_distribution.py  plot_exploration_heatmap.py  plot_fine_routing_results.py  plot_mcts_sequence_analysis.py  report_benchmark_search.py
core/: benchmark_mcts.py  edit_dsl.py  edit_dsl_compat.py  flexible_models.py  permutation_mcts.py  prompts.py
data_prep/: build_assign_increment_catalog.py  build_compositional_catalogues.py  build_dense_deltas_from_canonical.py  build_fine_routing_dataset.py  build_ft_fine_routing_dataset.py  build_joint_catalogue.py  build_local_moebius_targets.py  build_local_subset_catalog.py  build_pair_program_graph.py  canonicalize_programs.py  dense_reevaluation.py  import_mined_dense_matrix.py  merge_dense_increment.py  precompute_benchmark_embeddings.py  program_support.py  supervise_ft_fine_routing_dataset.py
docs/: artifact_schema.md  data_generation.md
evaluation/: eval_fine_router_split.py  eval_fine_router_topk_vs_mcts.py  eval_fine_routing_marginalization.py  evaluate_compositional_router.py  evaluate_router_cross_benchmark.py  evaluate_transfer.py
experiments/: bootstrap_pair_metrics.py  cg_full_only_report.py  diagnose_full_generalization.py  eval_compositional_downstream.py  eval_compositional_generalization.py  eval_joint_router_downstream.py  filter_observed_for_holdout.py  holdout_edge_split.py  report_pair_dense_mined.py  (+12 more)
ft_study/: data.py  (+5 more)
(+117 files in other folders)
