[project]
name = "flexible-test-time-program-selection"
version = "0.1.0"
description = "Flexible test-time program selection for transformers via MCTS-guided layer-sequence search and learned routing"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "tqdm",
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "scipy",
    "wandb",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
ft = ["trl", "peft", "accelerate", "bitsandbytes"]
hpo = ["smac>=2.0", "ConfigSpace>=0.7", "scikit-learn>=1.3"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "core*", "routers*", "training*", "evaluation*", "experiments*",
    "analysis*", "data_prep*", "ft_study*", "pipeline*",
    "program_consistency*", "tests*",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
